test/studies/blas/marybeth/saxpy2.good
saxpy2.chpl:1: In function 'saxpy':
saxpy2.chpl:1: error: 'D' used before defined (first used here)
